--- a/assets/style.css
+++ b/assets/style.css
@@ -332,6 +332,7 @@ right: 50px;
 @media screen and (max-width: 575px) {
   .section-title {
     width: 95%;
+    padding 15px 15px;
   }
 
   .section p {
